--- a/sass/_team.scss
+++ b/sass/_team.scss
@@ -32,7 +32,7 @@
 
             img {
                 width: 100%;
-                min-height: 100%;
+                height: auto;
             }
 
             figcaption {
